fixed logo position small screens

--- a/client/src/styles/newcss.scss
+++ b/client/src/styles/newcss.scss
@@ -3124,7 +3124,17 @@ h1 {
 
     #logo-big-screen {
       img {
-        transform: translateX(37px);
+        transform: translateX(27px);
+      }
+    }
+
+  }
+
+  @media only screen and (max-width: 390px) {
+
+    #logo-big-screen {
+      img {
+        transform: translateX(30px);
       }
     }
 
